--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,25 @@
 *.exe
 *.out
 *.app
+
+sln/vc10/\.vs/
+
+sln/vc10/Debug/
+
+sln/vc10/sample_prime_numbers/Debug/
+
+sln/vc17/\.vs/
+
+sln/vc17/bitfield/Debug/
+
+*.filters
+
+*.user
+
+sln/vc17/Debug/
+
+sln/vc17/gtest/Debug/
+
+sln/vc17/sample_prime_numbers/Debug/
+
+sln/vc17/test_bitfield/Debug/
